Closed Bug 1650210 Opened 5 years ago Closed 5 years ago

clang-11 error in nsTouchBar.mm updateItem

Categories

(Core :: Widget: Cocoa, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: away, Assigned: away)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

/builds/worker/checkouts/gecko/widget/cocoa/nsTouchBar.mm:214:12: error: cannot initialize return object of type 'bool' with an rvalue of type 'nullptr_t' 

error: cannot initialize return object of type 'bool' with an rvalue of type 'nullptr_t'

Pushed by dmajor@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ebc34cbdcd3a Fix a clang-11 error in nsTouchBar.mm r=mstange
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: