Bug 1650210 - Fix a clang-11 error in nsTouchBar.mm  r=mstange

error: cannot initialize return object of type 'bool' with an rvalue of type 'nullptr_t'

Differential Revision: https://phabricator.services.mozilla.com/D82086